--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes ping {
+  85%, 100% {
+    transform: scale(1.5);
+    opacity: 0;
+  }
+}
